--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,4 @@
 ---
 - pages/michael-mcclure-at-the-naropa-institute-june-6-1976.md
 - pages/-muriel-rukeyser-at-sgwu-1969-.md
+- pages/kathy-acker-performance-reading-1986.md
