--- a/_data/kathy-acker-performance-reading-1986/manifest.json
+++ b/_data/kathy-acker-performance-reading-1986/manifest.json
@@ -23,6 +23,40 @@
         "id": "https://hipstas.github.io/annotating-spokenweb-performances/kathy-acker-performance-reading-1986/canvas-1/canvas",
         "type": "Canvas",
         "duration": 1143,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://hipstas.github.io/annotating-spokenweb-performances/annotations/kathy-acker-performance-reading-1986-canvas-1-audience.json",
+            "label": {
+              "none": ["Audience"]
+            }
+          }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://hipstas.github.io/annotating-spokenweb-performances/annotations/kathy-acker-performance-reading-1986-canvas-1-environment.json",
+            "label": {
+              "none": ["Environment"]
+            }
+          }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://hipstas.github.io/annotating-spokenweb-performances/annotations/kathy-acker-performance-reading-1986-canvas-1-acker-speaking.json",
+            "label": {
+              "none": ["Acker speaking"]
+            }
+          }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://hipstas.github.io/annotating-spokenweb-performances/annotations/kathy-acker-performance-reading-1986-canvas-1-acker-reading.json",
+            "label": {
+              "none": ["Acker reading"]
+            }
+          }
+        ],
         "items": [
           {
             "id": "https://hipstas.github.io/annotating-spokenweb-performances/kathy-acker-performance-reading-1986/canvas-1/paintings",
