--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,3 +3,4 @@
 - pages/-muriel-rukeyser-at-sgwu-1969-.md
 - pages/kathy-acker-performance-reading-1986.md
 - pages/performing-the-archive-leaf-leaf-s-2019-.md
+- pages/introduction.md
